src/test/deca/context/valid/langage_essentiel/regle_3_40.deca
class C{

}

{
    C c;
    if( c instanceof C){
        print("");
    }
    if( null instanceof C){
        print("");
    }
    if(c instanceof Object){
        print("");
    }
}