src/test/deca/context/invalid/langage_essentiel/troisieme_passe/regle_3_40_2.deca
// Description:
//    regle 3.40, l'expression evaluee par instanceof doit etre valide
//
// Resultats:
//    Ligne 13: Undeclared identifier : 'x'.


class C{

}

{
    if( x instanceof C){
        print("");
    }
}